--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tauri-apps/api": "2.0.0-beta.1",
     "@tauri-apps/cli": "2.0.0-beta.2",
     "@unocss/nuxt": "^0.58.5",
+    "typescript": "^5.3.3",
     "unocss": "^0.58.5"
   }
 }
